support for OCI automatic backups

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -91,6 +91,14 @@ lib_dir: "{{ opc_installer_dest_location }}"
 #
 config_file: "{{ opc_installer_dest_location }}/config_{{ oracle_source_database_sid }}"
 
+# RMAN cloud module lib dir by OCI tooling for automatic backups
+#
+lib_dir_oci_automatic_backups: "/opt/oracle/dcs/commonstore/pkgrepos/oss/odbcs/"
+
+# RMAN cloud module config file dir by OCI tooling for automatic backups
+#
+config_file_dir_oci_automatic_backups: "/opt/oracle/dcs/commonstore/objectstore/opc_pfile/"
+
 # Default OCI bucket prefix for target database
 #
 oci_bucket_prefix: "bkup_"
